update feyzian, add binance pro channel

--- a/.env.sample
+++ b/.env.sample
@@ -3,7 +3,9 @@ api_hash =
 SECRET_KEY =
 API_KEY =
 username =
-CHANNEL_TEST =
-CHANNEL_TEST_2 =
+CHANNEL_TEST_FEYZIAN =
+CHANNEL_TEST_ALI_BEYRANVAND =
+CHANNEL_TEST_BINANCE_PRO =
 CHANNEL_FEYZ=
 CHANNEL_ALI_BEY=
+CHANNEL_BINANCE_PRO=
