add rastad channel

--- a/.env.sample
+++ b/.env.sample
@@ -6,6 +6,8 @@ username =
 CHANNEL_TEST_FEYZIAN =
 CHANNEL_TEST_ALI_BEYRANVAND =
 CHANNEL_TEST_BINANCE_PRO =
+CHANNEL_TEST_RASTAD =
 CHANNEL_FEYZ=
 CHANNEL_ALI_BEY=
 CHANNEL_BINANCE_PRO=
+CHANNEL_RASTAD=
